fixed modal placing and scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,32 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@layer base {
+  /* width */
+  ::-webkit-scrollbar {
+    @apply w-2;
+  }
+  
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    @apply bg-inherit;
+  }
+  ::-webkit-scrollbar-thumb {
+    @apply bg-pink-200 dark:bg-violet-600 rounded-xl;
+  }
+  .modal::-webkit-scrollbar-thumb {
+    @apply bg-transparent;
+  }
+
+  /* Handle */
+  .modal:hover::-webkit-scrollbar-thumb {
+    @apply bg-pink-200 dark:bg-violet-600 rounded-xl;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    @apply bg-violet-700 rounded-xl;
+  }
+}
